--- a/src/app/article-list/article-list.component.css
+++ b/src/app/article-list/article-list.component.css
@@ -1,22 +1,68 @@
-.container {
-    background-color: #3e4042;
+body{
+    background-color: rgba(40, 43, 48, .75);
+}
+#articles {
     border-radius: 5px;
+    width: 75vw;
+    margin: auto;
 }
 #articleList {
     margin-top: 2vh;
 }
 #article {
+    background-color: rgba(40, 43, 48, .95);
     margin-bottom: 1vh;
+    box-shadow: 5px 8px 18px 3px rgba(0,0,0,0.50);
+    border-radius: 5px;
 }
+
+#body p{
+    padding: .5vw;
+    color: white;
+}
+
 #photo {
-    width: 28vw;
-    height: 17.5vh;
+    width: 100%;
+    height: 18vh;
 }
 #parent {
     display: flex;
 }
-#tags {
-}
+
 #infos {
     flex-grow: 1;
+}
+
+
+.b-0 {
+    bottom: 0;
+}
+.bg-shadow {
+    background: rgba(76, 76, 76, 0);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(179, 171, 171, 0)), color-stop(49%, rgba(48, 48, 48, 0.37)), color-stop(100%, rgba(19, 19, 19, 0.8)));
+    background: linear-gradient(to bottom, rgba(179, 171, 171, 0) 0%, rgba(48, 48, 48, 0.71) 49%, rgba(19, 19, 19, 0.8) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4c4c', endColorstr='#131313', GradientType=0 );
+}
+.top-indicator {
+    right: 0;
+    top: 1rem;
+    bottom: inherit;
+    left: inherit;
+    margin-right: 1rem;
+}
+.overflow {
+    position: relative;
+    overflow: hidden;
+}
+.zoom img {
+    transition: all 0.2s linear;
+}
+.zoom:hover img {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
+.featurette-divider {
+    border-color: #868686;
+    width: 50vw;
 }
