added news to nav

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -15,6 +15,9 @@
                 <a class="nav-link" [routerLink]="['/animes']" routerLinkActive="is-active">ANIMES</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" [routerLink]="['/articles']" routerLinkActive="is-active">NEWS</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" [routerLink]="['/lists']" routerLinkActive="is-active">LISTS</a>
             </li>
         </ul>
