--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,6 +2,9 @@
     background-image: url("../assets/bghome.webp");
     background-attachment: fixed;
     background-repeat: no-repeat;
+    padding-top: 1vh;
+    padding-bottom: 1vh;
+    min-height: 100vh;
     background-size: cover;
 }
 
