--- a/src/app/article-list/article-list.component.html
+++ b/src/app/article-list/article-list.component.html
@@ -3,7 +3,7 @@
     <div id="titre_page" class="text-center">
         <h1>Actualités</h1>
     </div>
-    <div class="container">
+    <div class="container" *ngIf="listArticles">
         <div class="row">
             <div class="row">
                 <div class="col-12 pb-5">
@@ -17,24 +17,21 @@
                                             <div class="position-relative">
                                                 <!--thumbnail img-->
                                                 <div class="ratio_left-cover-1 image-wrapper">
-                                                    <a href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">
+                                                    <a routerLink="/articles/1">
                                                         <img id="image1" class="img-fluid w-100"
                                                              src="data:image/webp;base64,{{listArticles[0].cover.content}}"
                                                              alt="Bootstrap news template">
                                                     </a>
                                                 </div>
                                                 <div class="position-absolute p-2 p-lg-3 b-0 w-100 bg-shadow">
-                                                    <!--title-->
-                                                    <a href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">
+                                                    <a routerLink="/articles/1">
                                                         <h2 class="h3 post-title text-white my-1">{{listArticles[0].title}}</h2>
                                                     </a>
-                                                    <!-- meta title -->
                                                     <div class="news-meta">
                                                         <span class="news-author">by <a
                                                             class="text-white font-weight-bold"
                                                             href="/#/animes">{{listArticles[0].author.username}}</a></span>
-                                                        <span
-                                                            class="news-date"> on {{listArticles[0].created_at}}</span>
+                                                        <span class="news-date"> on {{listArticles[0].created_at}}</span>
                                                     </div>
                                                 </div>
                                             </div>
@@ -49,7 +46,7 @@
                                     <div class="card border-0 rounded-0 text-white overflow zoom">
                                         <div class="position-relative">
                                             <div class="ratio_right-cover-2 image-wrapper">
-                                                <a href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">
+                                                <a routerLink="/articles/2">
                                                     <img class="img-fluid"
                                                          src="data:image/webp;base64,{{listArticles[1].cover.content}}"
                                                          alt="simple blog template bootstrap">
@@ -57,8 +54,8 @@
                                             </div>
                                             <div class="position-absolute p-2 p-lg-3 b-0 w-100 bg-shadow">
                                                 <a class="p-1 badge badge-primary rounded-0"
-                                                   href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">Lifestyle</a>
-                                                <a href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">
+                                                   routerLink="/articles/1">Lifestyle</a>
+                                                <a routerLink="/articles/4">
                                                     <h2 class="h5 text-white my-1">{{listArticles[1].title}}</h2>
                                                 </a>
                                             </div>
@@ -72,7 +69,7 @@
                                         <div class="position-relative">
                                             <!--thumbnail img-->
                                             <div class="ratio_right-cover-2 image-wrapper">
-                                                <a href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">
+                                                <a routerLink="/articles/2">
                                                     <img class="img-fluid"
                                                          src="data:image/webp;base64,{{listArticles[2].cover.content}}"
                                                          alt="bootstrap templates for blog">
@@ -81,9 +78,9 @@
                                             <div class="position-absolute p-2 p-lg-3 b-0 w-100 bg-shadow">
                                                 <!-- category -->
                                                 <a class="p-1 badge badge-primary rounded-0"
-                                                   href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">Motocross</a>
+                                                   routerLink="/articles/2">Motocross</a>
                                                 <!--title-->
-                                                <a href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">
+                                                <a routerLink="/articles/2">
                                                     <h2 class="h5 text-white my-1">{{listArticles[2].title}}</h2>
                                                 </a>
                                             </div>
@@ -97,7 +94,7 @@
                                         <div class="position-relative">
                                             <!--thumbnail img-->
                                             <div class="ratio_right-cover-2 image-wrapper">
-                                                <a href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">
+                                                <a routerLink="/articles/3">
                                                     <img class="img-fluid"
                                                          src="data:image/webp;base64,{{listArticles[3].cover.content}}"
                                                          alt="bootstrap blog wordpress theme">
@@ -106,9 +103,9 @@
                                             <div class="position-absolute p-2 p-lg-3 b-0 w-100 bg-shadow">
                                                 <!-- category -->
                                                 <a class="p-1 badge badge-primary rounded-0"
-                                                   href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">Fitness</a>
+                                                   routerLink="/articles/3">Fitness</a>
                                                 <!--title-->
-                                                <a href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">
+                                                <a routerLink="/articles/3">
                                                     <h2 class="h5 text-white my-1">{{listArticles[3].title}}</h2>
                                                 </a>
                                             </div>
@@ -122,7 +119,7 @@
                                         <div class="position-relative">
                                             <!--thumbnail img-->
                                             <div class="ratio_right-cover-2 image-wrapper">
-                                                <a href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">
+                                                <a routerLink="/articles/4">
                                                     <img class="img-fluid"
                                                          src="data:image/webp;base64,{{listArticles[0].cover.content}}"
                                                          alt="blog website templates bootstrap">
@@ -131,9 +128,9 @@
                                             <div class="position-absolute p-2 p-lg-3 b-0 w-100 bg-shadow">
                                                 <!-- category -->
                                                 <a class="p-1 badge badge-primary rounded-0"
-                                                   href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">Adventure</a>
+                                                   routerLink="/articles/4">Adventure</a>
                                                 <!--title-->
-                                                <a href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">
+                                                <a routerLink="/articles/4">
                                                     <h2 class="h5 text-white my-1">{{listArticles[0].title}}</h2>
                                                 </a>
                                             </div>
@@ -155,10 +152,10 @@
                         class="text-muted">{{listArticles[0].title}}</span></h2>
                     <p class="lead">{{listArticles[0].body}}</p>
                 </div>
-                <div class="col-md-5 order-md-1" style="border: red 1px solid">
+                <div class="col-md-5 order-md-1">
                     <img class="bottom bd-placeholder-img bd-placeholder-img-lg featurette-image mx-auto"
                          src="data:image/webp;base64,{{listArticles[3].cover.content}}"
-                         alt="bootstrap blog wordpress theme" style=" width: 100%;height: 50%;">
+                         alt="bootstrap blog wordpress theme">
                 </div>
             </div>
             <hr>
