--- a/src/app/article-editor/article-editor.component.html
+++ b/src/app/article-editor/article-editor.component.html
@@ -1,6 +1,18 @@
+<body class="container">
+<form [formGroup]="articleInfos">
+    <div class="form-group">
+        <label for="title">Title</label>
+        <input type="text" class="form-control" id="title" formControlName="title"
+               placeholder="Enter Title">
+        <label for="featuredImage">Featured Image</label>
+        <input id="featuredImage" type="file"
+               placeholder="Upload file" accept="image/*" (change)="fileChange($event)">
+    </div>
+</form>
 <div id="editor">
-    <ckeditor [(ngModel)]="model" [editor]="Editor" data="<p>Hello, world!</p>" (ready)="onReady($event)"></ckeditor>
+    <ckeditor [(ngModel)]="body" [editor]="Editor" data="<p>Hello, world!</p>" (ready)="onReady($event)"></ckeditor>
 </div>
 
-<button (click)="onAziz()">Publish Article</button>
+<button (click)="submit()">Publish Article</button>
+</body>
 
