edited css for aticles-list article and article-editor as well as some tweaking on general css

--- a/src/app/article-list/article-list.component.css
+++ b/src/app/article-list/article-list.component.css
@@ -73,3 +73,8 @@ body{
     border-color: #868686;
     width: 50vw;
 }
+.articleImage {
+    margin-top: 1vh;
+    width: 23vw;
+    height: 23vh;
+}
