--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -2,14 +2,15 @@
     outline-width: 0;
     font-family: 'Karla', sans-serif !important;
 }
-
+body{
+    padding-top: 2vh;
+    padding-bottom: 2vh;
+}
 .testA{
     background-color: rgba(40, 43, 48, .75);
     border-radius: 0.3em;
     max-width: 40vw;
     margin: auto;
-    margin-top: 1.5vh;
-    margin-bottom: 1.5vh;
     padding: 1vw;
 }
 
@@ -76,6 +77,7 @@ select:-webkit-autofill:focus {
 
 @media screen and (max-width: 576px) {
     body{
+        padding: 0;
         margin: -10px;
     }
     h1{
