--- a/src/app/anime-list/anime-list.component.css
+++ b/src/app/anime-list/anime-list.component.css
@@ -1,3 +1,8 @@
+body{
+    background-color: rgba(40, 43, 48, .5);
+    padding-bottom: 2vh;
+}
+
 a {
     text-decoration: none;
     color: #e4e4e4;
