--- a/src/app/anime-list/anime-list.component.html
+++ b/src/app/anime-list/anime-list.component.html
@@ -5,22 +5,24 @@
     <meta name="author" content="jeunes-entrepreneurs">
     <title>Anime List</title>
 </head>
-<div class="container">
-    <div class="row">
+<body>
+    <div class="container">
+        <div class="row">
 
-    <div *ngFor="let anime of animeList" class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-            <a [routerLink]="['/animes', anime.id]">
-                <div class="card">
-                    <img  src="{{anime.cover}}" class="card-img-top" alt="one piece png">
-                        <div class="card-img-overlay">
-                            <h5 class="card-title">{{anime.internationalTitle}}</h5>
+        <div *ngFor="let anime of animeList" class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                <a [routerLink]="['/animes', anime.id]">
+                    <div class="card">
+                        <img  src="{{anime.cover}}" class="card-img-top" alt="one piece png">
+                            <div class="card-img-overlay">
+                                <h5 class="card-title">{{anime.internationalTitle}}</h5>
+                            </div>
+                        <div class="card-body">
+                            <p class="card-text">{{anime.synopsis | slice:0: 150 }} ...</p>
                         </div>
-                    <div class="card-body">
-                        <p class="card-text">{{anime.synopsis | slice:0: 150 }} ...</p>
                     </div>
-                </div>
-            </a>
-        </div>
+                </a>
+            </div>
 
+        </div>
     </div>
-</div>
+</body>
