--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,10 +2,8 @@
     background-image: url("../assets/bghome.webp");
     background-attachment: fixed;
     background-repeat: no-repeat;
-    padding-top: 1vh;
-    padding-bottom: 1vh;
-    min-height: 100vh;
     background-size: cover;
+    padding: 0;
 }
 
 footer {
