--- a/src/app/article-editor/article-editor.component.html
+++ b/src/app/article-editor/article-editor.component.html
@@ -8,7 +8,7 @@
                            placeholder="Enter Title">
                     <br/>
                     <div class="custom-file">
-                        <input type="file" class="custom-file-input" id="featuredImage">
+                        <input type="file" class="custom-file-input" id="featuredImage" (change)="fileChange($event)">
                         <label class="custom-file-label" for="featuredImage">Choose featured image</label>
                     </div>
                 </div>
