--- a/src/app/article-list/article-list.component.html
+++ b/src/app/article-list/article-list.component.html
@@ -31,7 +31,8 @@
                                                         <span class="news-author">by <a
                                                             class="text-white font-weight-bold"
                                                             href="/#/animes">{{listArticles[0].author.username}}</a></span>
-                                                        <span class="news-date"> on {{listArticles[0].created_at}}</span>
+                                                        <span
+                                                            class="news-date"> on {{listArticles[0].created_at}}</span>
                                                     </div>
                                                 </div>
                                             </div>
@@ -142,22 +143,22 @@
                     </section>
                 </div>
             </div>
-
-            <!-- block articles horizontaux -->
-
-            <div class="row featurette" *ngFor=" let article of listArticlesNext">
-                <hr class="featurette-divider">
-                <div class="col-md-7 order-md-2">
-                    <h2 class="featurette-heading">{{article.title}} <span
-                        class="text-muted">{{article.title}}</span></h2>
-                    <p class="lead">{{article.body}}</p>
+            <a *ngFor="let article of listArticlesNext">
+                <div class="row featurette" routerLink="/articles/{{article.id}}">
+                    <hr class="featurette-divider">
+                    <div class="col-md-7 order-md-2">
+                        <h2 class="featurette-heading">{{article.title}} <span
+                            class="text-muted">{{article.title}}</span></h2>
+                        <p class="lead">{{article.body}}</p>
+                    </div>
+                    <div class="col-md-5 order-md-1">
+                        <img
+                            class="bottom bd-placeholder-img bd-placeholder-img-lg featurette-image mx-auto articleImage"
+                            src="data:image/webp;base64,{{article.cover.content}}"
+                            alt="bootstrap blog wordpress theme">
+                    </div>
                 </div>
-                <div class="col-md-5 order-md-1">
-                    <img class="bottom bd-placeholder-img bd-placeholder-img-lg featurette-image mx-auto articleImage"
-                         src="data:image/webp;base64,{{article.cover.content}}"
-                         alt="bootstrap blog wordpress theme">
-                </div>
-            </div>
+            </a>
             <hr>
         </div>
     </div>
