redo some css for user account and articles

--- a/src/app/account/account.component.scss
+++ b/src/app/account/account.component.scss
@@ -52,4 +52,9 @@ textarea{
     min-width: 38.5vw
 }
 
-#uploadImage {display: none;}
+#uploadImage {
+    display: none;
+}
+.user-avatar:hover {
+    cursor: pointer;
+}
