--- a/src/app/lists/lists.component.html
+++ b/src/app/lists/lists.component.html
@@ -1,10 +1,28 @@
-<div class="col text-center">
+<div class="col button-top">
     <button class="btn btn-light" [routerLink]="['/list-create']">Create a new list</button>
 </div>
-<ul>
-    <li *ngFor="let list of lists">
-        <a [routerLink]="['/lists', list.id]">{{ list.name }}</a>
-        <p>{{ list.description }}</p>
-    </li>
-</ul>
+<div class="row" id="rowList">
+    <div *ngFor="let list of lists; let i = index" class="col-lg-5 col-md-6 col-12" id="list">
+        <a [routerLink]="['/lists', list.id]" id="boxLink">
+            <div class=" list col-12 row">
+                <div class="col-xl-3 col-lg-3 col-md-4 col-3 row imgsDiv" id="aziz">
+                        <div *ngIf="listsImages[i].length<4" class="containerImg" >
+                            <div class="imgDiv">
+                                <img src="{{listsImages[i][0]}}"  alt="" class="oneImg">
+                            </div>
+                        </div>
 
+                        <div *ngIf="listsImages[i].length==4" class=" containerImg" >
+                            <div *ngFor="let listImage of listsImages[i]; let j=index"  class="imgDiv">
+                                <img src="{{listImage}}" class="" alt="" class="fourImgs">
+                            </div>
+                        </div>
+                </div>
+                <div class="col-xl-7 col-lg-7 col-md-7 col-6">
+                    <a [routerLink]="['/lists', list.id]" id="nameList">{{ list.name }}</a>
+                    <p class="textDescList">Par name <br/>{{ list.description }}</p>
+                </div>
+            </div>
+        </a>
+    </div>
+</div>
