--- a/src/app/lists/lists.component.css
+++ b/src/app/lists/lists.component.css
@@ -60,7 +60,7 @@ p {
     height: 15vh;
 }
 
-#aziz{
+#imgDesc{
     width: 8vw;
     height: 15vh;
 }
@@ -102,7 +102,7 @@ p {
         font-size: 1.5vw;
     }
 
-    #aziz{
+    #imgDesc{
         width: 20vw;
         height: 12vh;
     }
@@ -143,7 +143,7 @@ p {
         font-size: 1.25vw;
     }
 
-    #aziz{
+    #imgDesc{
         width: 12vw;
         height: 12vh;
     }
@@ -173,7 +173,7 @@ p {
         height: 6vh;
     }
 
-    #aziz{
+    #imgDesc{
         width: 12vw;
         height: 12vh;
     }
@@ -212,7 +212,7 @@ p {
         height: 6vh;
     }
 
-    #aziz{
+    #imgDesc{
         width: 12vw;
         height: 12vh;
     }
