--- a/src/app/lists/lists.component.html
+++ b/src/app/lists/lists.component.html
@@ -1,8 +1,8 @@
 <div class="col button-top">
     <button class="btn btn-light" [routerLink]="['/list-create']">Create a new list</button>
 </div>
-<div class="row" id="rowList">
-    <div *ngFor="let list of lists; let i = index" class="col-lg-5 col-md-6 col-12" id="list">
+<div class="row" id="rowList" *ngIf="listsImages!== undefined">
+    <div *ngFor="let list of lists; let i = index" class="col-lg-5 col-md-6 col-12" id="list" >
         <a [routerLink]="['/lists', list.id]" id="boxLink">
             <div class=" list col-12 row">
                 <div class="col-xl-3 col-lg-3 col-md-4 col-3 row imgsDiv" id="imgDesc">
