--- a/src/app/onelist/onelist.component.html
+++ b/src/app/onelist/onelist.component.html
@@ -24,16 +24,10 @@
             </td>
         </tr>
         <tr *ngIf=owned class="">
-            <td>
-                <button (click)="open(content)">
-                    <span>
-                        <i class="fa fa-plus-square"></i>
-                    </span>
-                </button>
-            </td>
+            <td><button (click)="open(content)"><span><i class="fa fa-plus-square"> add an anime</i></span></button></td>
             <td></td>
             <td></td>
-            <td></td>
+            <td><button (click)="deleteList()"><span><i class="fa fa-trash"></i> delete this list</span></button></td>
         </tr>
         </tbody>
     </table>
