--- a/src/app/anime/anime.component.html
+++ b/src/app/anime/anime.component.html
@@ -99,8 +99,8 @@
                                                                                             style="background-color: black;"></textarea>
                 </div>
                 <div class="form-group">
-                    <button type="submit"
-                            class="btn btn-primary">{{userHasComment ? 'Edit Comment' : 'Post Comment' }}</button>
+                    <button type="submit" class="btn btn-primary">{{userHasComment ? 'Edit Comment' : 'Post Comment' }}</button>
+                    <button *ngIf="userHasComment" id="delete-button" type="button" class="btn btn-danger" (click)="deleteComment()">Delete your comment</button>
                 </div>
             </form>
         </div>
