warn if the ip is different

--- a/src/app/account/account.component.scss
+++ b/src/app/account/account.component.scss
@@ -1,6 +1,11 @@
 *{
     color: white;
 }
+
+#alert-ip {
+    background-color: red;
+}
+
 .account-settings .user-profile {
     margin:auto;
     padding-bottom: 1vh;
