--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,5 +1,6 @@
 <div class="container">
     <ngx-spinner [visible]="spinner" [config]="spinnerConfig"></ngx-spinner>
+    <div *ngIf="!sameIp" class="alert alert-danger" role="alert" id="alert-ip">Your current ip address is different from your last connection. Please change password just to be safe.</div>
     <div class="row gutters">
         <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12">
             <div class="card h-100">
