new you can press a button to update if you want and its shows you that it worked

--- a/src/app/account/account.component.scss
+++ b/src/app/account/account.component.scss
@@ -6,6 +6,10 @@
     background-color: red;
 }
 
+#alert-success-ip {
+    background-color: green;
+}
+
 .account-settings .user-profile {
     margin:auto;
     padding-bottom: 1vh;
