--- a/src/app/anime-list/anime-list.component.html
+++ b/src/app/anime-list/anime-list.component.html
@@ -6,23 +6,51 @@
     <title>Anime List</title>
 </head>
 <body>
-    <div class="container">
-        <div class="row">
+<div class="container">
+    <div class="row">
 
         <div *ngFor="let anime of animeList" class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                <a [routerLink]="['/animes', anime.id]">
-                    <div class="card">
-                        <img  src="{{anime.cover}}" class="card-img-top" alt="one piece png">
-                            <div class="card-img-overlay">
-                                <h5 class="card-title">{{anime.internationalTitle}}</h5>
-                            </div>
-                        <div class="card-body">
-                            <p class="card-text">{{anime.synopsis | slice:0: 150 }} ...</p>
-                        </div>
+            <a [routerLink]="['/animes', anime.id]">
+                <div class="card">
+                    <img src="{{anime.cover}}" class="card-img-top" alt="one piece png">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title">{{anime.title}}</h5>
                     </div>
-                </a>
-            </div>
-
+                    <div class="card-body">
+                        <p class="card-text">{{anime.synopsis | slice:0: 150 }} ...</p>
+                    </div>
+                </div>
+            </a>
         </div>
     </div>
+
+    <div class="card-footer pb-0 pt-3">
+        <ul *ngIf="pages" class="pagination justify-content-center">
+            <li [ngClass]="{disabled:currentPage === 1}" class="page-item first-item">
+                <button (click)="changePage(1)" class="page-link">First</button>
+            </li>
+            <li [ngClass]="{disabled:currentPage === 1}" class="page-item previous-item">
+                <button (click)="changePage(currentPage-1)" class="page-link">Previous</button>
+            </li>
+            <li class="page-item" *ngIf="currentPage !==1">
+                <button routerLink [queryParams]="{ page: currentPage - 1 }" class="page-link">{{currentPage-1}}</button>
+            </li>
+            <li class="page-item">
+                <button (click)="changePage(currentPage)" class="page-link">{{currentPage}}</button>
+            </li>
+            <li class="page-item"[ngClass]="{disabled:currentPage === pages}">
+                <button (click)="changePage(currentPage+1)" class="page-link">{{currentPage+1}}</button>
+            </li>
+            <li class="page-item" *ngIf="currentPage === 1">
+                <button (click)="changePage(currentPage+2)" class="page-link">{{currentPage+2}}</button>
+            </li>
+            <li [ngClass]="{disabled:currentPage === pages}" class="page-item next-item">
+                <button (click)="changePage(currentPage+1)" class="page-link">Next</button>
+            </li>
+            <li [ngClass]="{disabled:currentPage === pages}" class="page-item last-item">
+                <button (click)="changePage(pages)" class="page-link">Last</button>
+            </li>
+        </ul>
+    </div>
+</div>
 </body>
