--- a/src/app/list-create/list-create.component.html
+++ b/src/app/list-create/list-create.component.html
@@ -16,12 +16,12 @@
         <p></p>
         <label for="addAnime">Add anime to your list</label>
         <input placeholder="Search an anime" id="addAnime" [(ngModel)]="selectedValue"
-               [ngModelOptions]="{standalone: true}" [typeahead]="animeList" typeaheadOptionField="internationalTitle"
+               [ngModelOptions]="{standalone: true}" [typeahead]="animeList" typeaheadOptionField="title"
                [typeaheadScrollable]="true" (typeaheadOnSelect)="onSelect($event)" class="form-control">
         <table class="table text-light">
             <tbody>
             <tr *ngFor="let l of newList; let i=index">
-                <th id="{{i+1}}" scope="row">{{l['internationalTitle']}}</th>
+                <th id="{{i+1}}" scope="row">{{l['title']}}</th>
                 <th id="{{l}}" class="text-right delete">
                     <button (click)="onDelete($event)" class="btn btn-xs btn-danger">X</button>
                 </th>
