--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -29,7 +29,7 @@
 
                 <ng-template #rt let-r="result" let-t="term">
                     <img [src]="r.cover" class="mr-1" style="width: 16px">
-                    <ngb-highlight [result]="r.internationalTitle" [term]="t"></ngb-highlight>
+                    <ngb-highlight [result]="r.title" [term]="t"></ngb-highlight>
                 </ng-template>
                 <input id="typeahead-template" type="text" class="form-control" [(ngModel)]="searchInputValue"
                        [ngbTypeahead]="search" [resultTemplate]="rt" [inputFormatter]="formatter"
