--- a/src/app/anime-list/anime-list.component.html
+++ b/src/app/anime-list/anime-list.component.html
@@ -24,19 +24,22 @@
         </div>
     </div>
 
-    <div class="card-footer pb-0 pt-3">
+    <br/>
+    <br/>
+
+    <div>
         <ul *ngIf="pages" class="pagination justify-content-center">
-            <li [ngClass]="{disabled:currentPage === 1}" class="page-item first-item">
+            <li [ngClass]="{disabled:currentPage === 1}" class="page-item">
                 <button (click)="changePage(1)" class="page-link">First</button>
             </li>
-            <li [ngClass]="{disabled:currentPage === 1}" class="page-item previous-item">
+            <li [ngClass]="{disabled:currentPage === 1}" class="page-item">
                 <button (click)="changePage(currentPage-1)" class="page-link">Previous</button>
             </li>
             <li class="page-item" *ngIf="currentPage !==1">
                 <button routerLink [queryParams]="{ page: currentPage - 1 }" class="page-link">{{currentPage-1}}</button>
             </li>
             <li class="page-item">
-                <button (click)="changePage(currentPage)" class="page-link">{{currentPage}}</button>
+                <button disabled (click)="changePage(currentPage)" class="page-link current">{{currentPage}}</button>
             </li>
             <li class="page-item"[ngClass]="{disabled:currentPage === pages}">
                 <button (click)="changePage(currentPage+1)" class="page-link">{{currentPage+1}}</button>
@@ -44,10 +47,10 @@
             <li class="page-item" *ngIf="currentPage === 1">
                 <button (click)="changePage(currentPage+2)" class="page-link">{{currentPage+2}}</button>
             </li>
-            <li [ngClass]="{disabled:currentPage === pages}" class="page-item next-item">
+            <li [ngClass]="{disabled:currentPage === pages}" class="page-item">
                 <button (click)="changePage(currentPage+1)" class="page-link">Next</button>
             </li>
-            <li [ngClass]="{disabled:currentPage === pages}" class="page-item last-item">
+            <li [ngClass]="{disabled:currentPage === pages}" class="page-item">
                 <button (click)="changePage(pages)" class="page-link">Last</button>
             </li>
         </ul>
