update password front is 100% done

--- a/src/app/password-update/password-update.component.html
+++ b/src/app/password-update/password-update.component.html
@@ -1,4 +1,5 @@
 <div id="container" class="col-lg-2 col-md-1 col-sm-1 test">
+    <div *ngIf="notSamePassword===true" class="alert alert-danger" role="alert" id="alert-ip">Error not same password</div>
     <div id="form">
         <h1>change password</h1>
         <form [formGroup]="updatePasswordForm" (ngSubmit)="onSubmit()">
