added pagination for research

--- a/src/app/anime-list/anime-list.component.css
+++ b/src/app/anime-list/anime-list.component.css
@@ -51,6 +51,12 @@ a {
     background-color: #3e4042!important;
 }
 
+*:focus {
+    border-color: inherit;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
 @media screen and (max-width: 1400px) {
     .card {
         width: 18vw;
