--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,4 +1,4 @@
-#icon_like, #icon_share {
+.icon_like, .icon_share {
     max-width: 28px;
     max-height: 28px;
     display:block;
@@ -13,14 +13,14 @@
     color: green;
     display:block;
 }
-#image_top1 {
+.image_top {
     max-width: 25em;
 }
-#image_top1:hover {
+.image_top:hover {
     opacity: 50%;
     transition: 0.4s;
 }
-#image_top1:not(:hover) {
+.image_top:not(:hover) {
     transition: 0.4s;
 }
 
@@ -31,4 +31,109 @@
 
 #top1 {
     padding-right: 2em;
+}
+
+li {
+    list-style: none;
+    padding: 1%;
+
+}
+
+.middle {
+background-color: #097ce7;
+    flex-grow: 1;
+    max-width: 2px;
+    z-index: 0;
+}
+
+
+body {
+    font-family: sans-serif;
+    font-size: 11px;
+    line-height: 1.5em;
+    color: #aaa;
+}
+
+
+.container {
+    background-color: #2e3032;
+    border-radius: 4px;
+
+    margin-top: 4%;
+}
+
+#carousel, #navigation {
+    flex: initial;
+    display: block;
+}
+
+#carousel {
+    overflow: hidden;
+    width: 30vw;
+    height: 40vh;
+    border-radius: 4px;
+}
+
+.p-wrapper {
+    width: 100%;
+    height: 100%;
+    transition: transform 0.4s ease-in-out;
+}
+
+#button_1:checked ~ #carousel .p-wrapper {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+
+}
+
+#button_2:checked ~ #carousel .p-wrapper {
+    -webkit-transform: translateY(-100%);
+    transform: translateY(-100%);
+}
+
+#button_3:checked ~ #carousel .p-wrapper {
+    -webkit-transform: translateY(-200%);
+    transform: translateY(-200%);
+}
+
+#button_4:checked ~ #carousel .p-wrapper {
+    -webkit-transform: translateY(-300%);
+    transform: translateY(-300%);
+}
+
+#button_5:checked ~ #carousel .p-wrapper {
+    -webkit-transform: translateY(-400%);
+    transform: translateY(-400%);
+}
+
+[class^="top_"] {
+
+}
+
+[class^="label_"] {
+    display: block;
+    cursor: pointer;
+    line-height: 32px;
+    text-align: center;
+    border-radius: 4px;
+    transition: all 0.3s ease;
+}
+
+
+
+[class^="label_"]:focus-within, [class^="label_"]:focus, [class^="button_"]:focus, [class^="button_"]:focus-within, ici:focus-within {
+    background-color: ivory;
+    color: gray;
+}
+
+
+
+label { margin: 1%;}
+.carousel-nav-icon {
+    height: 48px;
+    width: 48px;
+}
+
+.col, .col-sm, .col-md {
+
 }
