edited pagination now using page in url

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -12,7 +12,7 @@
     <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse" id="navbarsDefault">
         <ul id="nav" class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/animes']" routerLinkActive="is-active">ANIMES</a>
+                <a class="nav-link" [routerLink]="['/animes/page/1']" routerLinkActive="is-active">ANIMES</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['/articles']" routerLinkActive="is-active">NEWS</a>
